--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <packaging>jar</packaging>
  
 <name>librbary-retry</name>
-	<description>librbary-retry is a light-weight library that enables retry mechanism for customized methods.</description>
+	<description>Modified serentiy report templates for enabling custom features</description>
 	<url>https://github.com/Abhishek468/serenityReportmod</url>
 	<licenses>
 		<license>
